--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -116,6 +116,46 @@ function modalOpenClose(modalElement, open) {
 
 }
 
+function innerModalOpenClose(modalElement, open) {
+
+	var overlayStart, overlayEnd, start, end;
+	var timeline = new TimelineLite({onComplete: function() {
+		$('#overlay').trigger('hidden');	
+	}});
+ 	
+ 	if(open) {
+ 		overlayStart = { autoAlpha:0, display:'none' };
+ 		overlayEnd = { autoAlpha:1, display:'block' };
+		start = { yPercent:20, scale:.7, opacity:0, display:'none' };
+		end =  { yPercent:0, scale:1, opacity:1, ease: Elastic.easeOut.config(1, 0.5), display:'block' };
+
+		timeline
+		.fromTo($('#overlay'), .3, overlayStart, overlayEnd)
+		.fromTo($('#overlay .inner-modal'), .8, start, end);
+	}
+	else {	
+ 		overlayStart = { autoAlpha:1, display:'block' };
+ 		overlayEnd = { autoAlpha:0, display:'none' };
+		start = { yPercent:0, scale:1, opacity:1, display:'block' };
+		end =  { yPercent:20, scale:.7, opacity:0, ease: Expo.easeIn, display:'none' };
+
+		timeline
+		.fromTo($('#overlay .inner-modal'), .4, start, end)
+		.fromTo($('#overlay'), .3, overlayStart, overlayEnd);
+	}
+
+	var blurElement = {a:(open ? 3:0)};//start the blur at 0 pixels
+
+	TweenMax.to(blurElement, .3, {a:(open ? 3:0), onUpdate:applyBlur});
+
+	//here you pass the filter to the DOM element
+	function applyBlur()
+	{
+	  TweenMax.set(['#gameContent', '#bottom-bar', '#stages-bar'], {webkitFilter:"blur(" + blurElement.a + "px)",filter:"blur(" + blurElement.a + "px)"});  
+	};
+
+}
+
 var screenOpen = function(screenElement) {
 
 	screenElement.show();
@@ -129,94 +169,119 @@ var screenOpen = function(screenElement) {
 	speechTimeline.fromTo(screenElement.children('blockquote'), 1.1,  hidden, shown);
 	speechTimeline.fromTo(screenElement.find('section.instruction'), .7,  {yPercent:100, opacity:0}, {yPercent:0, opacity:1, ease:Expo.easeOut});
 
-	if(!_.isEmpty(screenElement.data()) && screenElement.data('animation') === 'scoreboard') {
+	if(!_.isEmpty(screenElement.data())) {
+	
+		if(screenElement.data('animation') === 'scoreboard')
+			scoreboardOpen();
 
-		new TimelineLite({onComplete: function() {
-			setTimeout(function() {
-		
-				var nodes = $('#ranking .player-logo');
-				var total = nodes.length;
-				var boxes = [];
-
-				for (var i = 0; i < total; i++) {
-				  
-				  var node = nodes[i];
-				  
-				  // Initialize transforms on node
-				  TweenLite.set(node, { x: 0 });
-				   
-				  boxes[i] = {
-				    transform: node._gsTransform,
-				    x: node.offsetLeft,
-				    y: node.offsetTop,
-				    node: node
-				  };
-				
-				}
-				  
-			  for (var i = 0; i < total; i++) {
-			    
-			    var box = boxes[i];
-			        
-			    var lastX = box.x;
-			    var lastY = box.y;
-
-				  $(box.node).css('order', $(box.node).data('rank'));
-			    
-			    box.x = box.node.offsetLeft;
-			    box.y = box.node.offsetTop;
-			    
-			    // Continue if box hasn't moved
-			    if (lastX === box.x && lastY === box.y) continue;
-			    
-			    // Reversed delta values taking into account current transforms
-			    var xReverse = box.transform.x + lastX - box.x;
-			    var yReverse = box.transform.y + lastY - box.y;  
-			    
-			    // Tween to 0 to remove the transforms
-			    var dest = { x:0, y:0, ease: Power1.easeInOut };
-			    TweenLite.fromTo(box.node, 0.5, { x: xReverse, y: yReverse }, dest);    
-			  }
-
-			  // $('#decider').show();
-
-				new TimelineLite()
-				// .to($('.instruction:nth(3)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay:2 })
-				// .fromTo($('.instruction:nth(4)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
-			  .fromTo($('.next-step'), .7, {yPercent:100, autoAlpha:0}, {yPercent:0, autoAlpha:1, ease:Expo.easeOut});
-			  
-			}, 2000);
-
-		}})
-		// .to($('.coins.delta'), .01, { autoAlpha:0, display:'none' })
-		// .to($('.instruction:nth(0)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
-		// .fromTo($('.instruction:nth(1)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
-		.to($('.coins.starting'), 1, { autoAlpha:0, y:'10%', display:'none', delay: 5 })
-		.fromTo($('.coins.delta'), 1, { autoAlpha:0, y:'10%', display:'none' }, { autoAlpha:1, y:'0%', display:'block' })
-
-		// .to($('.instruction:nth(1)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
-		// .fromTo($('.instruction:nth(2)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
-		.fromTo($('.coins.delta'), 1, { autoAlpha:1, display:'block' }, { autoAlpha:0, y:'10%', display:'none', delay: 5 })
-		.fromTo($('.coins.current'), 1, { autoAlpha:0, y:'10%', display:'none' }, { autoAlpha:1, y:'0%', display:'block' })
-		
-		// .to($('.instruction:nth(2)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
-		// .fromTo($('.instruction:nth(3)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
-		.fromTo($('.rank.starting'), 1, { autoAlpha:1, display:'block' }, { autoAlpha:0, x:'10%', display:'none', delay: 5 })
-		.fromTo($('.rank.current'), 1, { autoAlpha:0, x:'10%', display:'none' }, { autoAlpha:1, x:'0%', display:'block' });
-
+		else if(screenElement.data('animation') === 'debrief') {
+			new TimelineLite()
+			.fromTo($('#stages-bar'), 1.5, { yPercent:0, autoAlpha:1 }, { yPercent:-100, autoAlpha:0, ease:Expo.easeOut } )
+			.fromTo($('#login-header'), 1, { yPercent:-100, autoAlpha:0 }, { yPercent:0, autoAlpha:1, ease:Expo.easeIn } );
+		}
 	}
 
 
 }
 
+var scoreboardOpen = function() {
+
+	new TimelineLite({onComplete: function() {
+		setTimeout(function() {
+	
+			var nodes = $('#ranking .player-logo');
+			var total = nodes.length;
+			var boxes = [];
+
+			for (var i = 0; i < total; i++) {
+			  
+			  var node = nodes[i];
+			  
+			  // Initialize transforms on node
+			  TweenLite.set(node, { x: 0 });
+			   
+			  boxes[i] = {
+			    transform: node._gsTransform,
+			    x: node.offsetLeft,
+			    y: node.offsetTop,
+			    node: node
+			  };
+			
+			}
+			  
+		  for (var i = 0; i < total; i++) {
+		    
+		    var box = boxes[i];
+		        
+		    var lastX = box.x;
+		    var lastY = box.y;
+
+			  $(box.node).css('order', $(box.node).data('rank'));
+		    
+		    box.x = box.node.offsetLeft;
+		    box.y = box.node.offsetTop;
+		    
+		    // Continue if box hasn't moved
+		    if (lastX === box.x && lastY === box.y) continue;
+		    
+		    // Reversed delta values taking into account current transforms
+		    var xReverse = box.transform.x + lastX - box.x;
+		    var yReverse = box.transform.y + lastY - box.y;  
+		    
+		    // Tween to 0 to remove the transforms
+		    var dest = { x:0, y:0, ease: Power1.easeInOut };
+		    TweenLite.fromTo(box.node, 0.5, { x: xReverse, y: yReverse }, dest);    
+		  }
+
+		  // $('#decider').show();
+
+			new TimelineLite({onComplete: function() {
+
+				openInnerModal(undefined, true);
+
+			}})
+			// .to($('.instruction:nth(3)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay:2 })
+			// .fromTo($('.instruction:nth(4)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
+		  .fromTo($('.next-step'), .7, {yPercent:100, autoAlpha:0}, {yPercent:0, autoAlpha:1, ease:Expo.easeOut});
+		  
+		}, 2000);
+
+	}})
+	// .to($('.coins.delta'), .01, { autoAlpha:0, display:'none' })
+	// .to($('.instruction:nth(0)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
+	// .fromTo($('.instruction:nth(1)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
+	.to($('.coins.starting'), 1, { autoAlpha:0, y:'10%', display:'none', delay: 5 })
+	.fromTo($('.coins.delta'), 1, { autoAlpha:0, y:'10%', display:'none' }, { autoAlpha:1, y:'0%', display:'block' })
+
+	// .to($('.instruction:nth(1)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
+	// .fromTo($('.instruction:nth(2)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
+	.fromTo($('.coins.delta'), 1, { autoAlpha:1, display:'block' }, { autoAlpha:0, y:'10%', display:'none', delay: 5 })
+	.fromTo($('.coins.current'), 1, { autoAlpha:0, y:'10%', display:'none' }, { autoAlpha:1, y:'0%', display:'block' })
+	
+	// .to($('.instruction:nth(2)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
+	// .fromTo($('.instruction:nth(3)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
+	.fromTo($('.rank.starting'), 1, { autoAlpha:1, display:'block' }, { autoAlpha:0, x:'10%', display:'none', delay: 5 })
+	.fromTo($('.rank.current'), 1, { autoAlpha:0, x:'10%', display:'none' }, { autoAlpha:1, x:'0%', display:'block' });
+}
+
 /*
 	Modal animation handles
 */
-$('.modal').on('show', function(evt) {
+$('.modal:not(#overlay)').on('show', function(evt) {
 	modalOpenClose($(evt.currentTarget), true);
 });
-$('.modal').on('hide', function(evt) {
+$('.modal:not(#overlay)').on('hide', function(evt) {
 	modalOpenClose($(evt.currentTarget), false);
+});
+
+$('#overlay').on('show', function(evt) {
+	evt.preventDefault();
+	evt.stopPropagation();
+
+	innerModalOpenClose($(evt.currentTarget), true);
+});
+$('#overlay').on('hide', function(evt) {
+	innerModalOpenClose($(evt.currentTarget), false);
 });
 
 /*
