Main menu implementation.

--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -37,6 +37,7 @@ $tangerine: #ff9600;
 $color-pink: #ff115a;
 $pink-dark: #e90048;
 $pink-light: #ff3d6b;
+$pink-red-two: #ff115a;
 
 // Grey/White
 $grey-white: #d8d8d8;
