--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -32,8 +32,6 @@
 
 	}
 
-
-
 	// On Mobile
 	&.isMobile {
 		padding-top: 10px;
@@ -42,6 +40,51 @@
 	// Blur all contents during modal
 	&.blur {
 		@include filter(blur, 2.9px);
+	}
+
+}
+
+#main_menu {
+
+	#btn-back {
+
+		color: $color-white;
+
+		height: 32px;
+		width: 64px;
+		
+    text-align: center;
+    float: right;
+		font-size: 12px;
+    line-height: 1.17;
+    padding-top: 9%;
+    padding-right: 21%;
+
+		@include gradient-vertical($sunflower, $tangerine, 90%, 10%);	
+
+  	&:before {
+	    position: absolute;
+	    content: "";
+	    top: 20px;
+	    left: 86%;
+	    width: 0;
+	    height: 0;
+	    border-left: 28px solid #ff7800;
+	    border-top: 13px solid transparent;
+	    border-bottom: 13px solid transparent;
+	  }
+	}
+
+	#btn-reconnect, #btn-quit-no {
+		@include gradient-vertical($blue-light, $blue-dark, 90%, 10%);	
+	}
+
+	#btn-quit {
+    margin-top: -10%;
+		@include gradient-vertical($pink-red-two, $pink-dark, 90%, 10%);	
+	}
+	#btn-quit-yes {
+		@include gradient-vertical($pink-red-two, $pink-dark, 90%, 10%);
 	}
 
 }
@@ -134,6 +177,16 @@
 		// border-bottom: 4px solid $tangerine;
 	}
 
+}
+.btn_cap {
+	width: 90%;
+	margin: 15% auto;
+	margin-top: 0px;
+	font-size: 12px;
+	color: lighten($background-color, 20%);
+	&.pink {
+		color: $pink-dark;
+	}
 }
 
 .header {
